--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,14 @@
+#[theme]
+#base="dark"
+#primaryColor="#F63366"
+#backgroundColor="#FFFFFF"
+#secondaryBackgroundColor="#F0F2F6"
+#textColor="#262730"
+#font="sans serif"
+
 [theme]
-base="dark"
-primaryColor="#F63366"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
-font="sans serif"
+base="light"
+primaryColor="#f67733"
+backgroundColor="#c9c5c5"
+textColor="#5e5d57"
+font="serif"
